Closed
Bug 946585
Opened 12 years ago
Closed 12 years ago
Change how the form element pointer affects parsing template elements, to reduce weirdness in templates
Categories
(Core :: DOM: HTML Parser, defect)
Core
DOM: HTML Parser
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: rniwa, Assigned: wchen)
Details
Attachments
(1 file)
|
22.57 KB,
patch
|
hsivonen
:
review+
|
Details | Diff | Splinter Review |
Make HTML5 parser changes to match the HTML5 specification change: http://html5.org/tools/web-apps-tracker?from=8330&to=8331
Change how the form element pointer affects parsing <template> elements, to reduce weirdness in templates (e.g. before you couldn't have a template that contained a form if it was itself inside a form).
Also see https://bugs.webkit.org/show_bug.cgi?id=125279
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → wchen
| Reporter | ||
Comment 1•12 years ago
|
||
WebKit merged this change in http://trac.webkit.org/changeset/160182.
| Assignee | ||
Comment 2•12 years ago
|
||
Links to parts of the spec that changes:
http://www.whatwg.org/specs/web-apps/current-work/multipage/tree-construction.html#parsing-main-inbody
http://www.whatwg.org/specs/web-apps/current-work/multipage/tree-construction.html#parsing-main-intable
http://www.whatwg.org/specs/web-apps/current-work/multipage/the-end.html#parsing-html-fragments
The "Parsing HTML fragments" change has a mistake, I've filed a spec bug for it (https://www.w3.org/Bugs/Public/show_bug.cgi?id=24017)
Attachment #8343554 -
Flags: review?(hsivonen)
| Assignee | ||
Comment 3•12 years ago
|
||
I'll attach my tests when I feel I have sufficient coverage for the changes.
Comment 4•12 years ago
|
||
Comment on attachment 8343554 [details] [diff] [review]
update implementation to match latest spec changes
>+nsIContent**
>+nsHtml5TreeBuilder::getFormPointerForContext(nsIContent** aContext)
>+{
r+ provided that you add an assertion here to check that we are on the main thread when getFormPointerForContext runs.
Attachment #8343554 -
Flags: review?(hsivonen) → review+
Comment 5•12 years ago
|
||
Do you know if there's a test in web-platform-tests? If not, can you please write one?
Flags: needinfo?(wchen)
| Assignee | ||
Comment 6•12 years ago
|
||
Spec was updated to remove special casing of template elements when trying to find the form pointer for a context element. (https://www.w3.org/Bugs/Public/show_bug.cgi?id=24017#c4).
(In reply to :Ms2ger from comment #5)
> Do you know if there's a test in web-platform-tests? If not, can you please
> write one?
I don't see any. Almost all of the changes here are better covered with parser tests, but I'll add a test to web-platform-tests for making sure that we have the correct form pointer when parsing fragments.
Flags: needinfo?(wchen)
| Assignee | ||
Comment 7•12 years ago
|
||
Flags: in-testsuite+
Comment 8•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in
before you can comment on or make changes to this bug.
Description
•