Bug 946585 - Change how the form element pointer affects parsing template elements. r=hsivonen